<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kurir</string>

    <!-- Hints -->
    <string name="user_name_hint">Mobile Number or Email</string>
    <string name="password_hint">Password</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="passcode_hint">Passcode</string>
    <string name="mobile_hint">Mobile Number</string>
    <string name="email_hint">Email</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="receiver_name_hint">Receiver\'s name</string>

    <!-- Tabs -->
    <string name="tab_find">Find</string>
    <string name="tab_track">Track</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_settings">Settings</string>

    <!-- Labels -->
    <string name="label_chat_with" formatted="false">Chat with %s</string>
    <string name="label_me">ME</string>
    <string name="label_him">HIM</string>
    <string name="label_desc">Parcel description</string>
    <string name="label_parcel_origin">Origin:</string>
    <string name="label_parcel_dest">Destination:</string>
    <string name="label_upload_photos">Upload/take photos</string>

    <!-- Title -->
    <string name="title_pick_image">Pick Image(s)</string>

    <!-- Menus -->
    <string name="menu_favorite">Add favorite</string>
    <string name="menu_new_task">New task</string>

    <!-- Buttons -->
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_verify">Verify</string>
    <string name="button_finish">Let\'s Go</string>
    <string name="button_gotcha">Gotcha</string>
    <string name="button_next">Next</string>
    <string name="button_add_request">Place Request</string>

    <!-- Error Message -->
    <string name="error_title">Sorry</string>
    <string name="error_generic">Oops! Something went wrong:( </string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_user_exists">User already exists</string>
    <string name="error_wrong_password">Incorrect password</string>
    <string name="error_wrong_code">Incorrect code (Try: 123456)</string>
    <string name="error_wrong_city">City not found</string>
</resources>
